# mizdb-tomselect

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
client/: mizselect.js
client/plugins/: add_button.js  changelist_button.js  dropdown_footer.js  edit_button.js
demo/app/: admin.py  apps.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
demo/app/migrations/: 0001_initial.py  0002_data.py
demo/app/static/demo/js/: mode_switch.js
demo/app/templates/: base.html  form.html  index.html  model_form.html
src/mizdb_tomselect/: __init__.py  views.py  widgets.py
src/mizdb_tomselect/static/mizdb-tomselect/css/: box-shadow-fix.css  mizselect.css
src/mizdb_tomselect/static/mizdb-tomselect/js/: mizdb-tomselect-init.js  mizselect.js
src/mizdb_tomselect/static/mizdb_tomselect/css/: mizselect.css
src/mizdb_tomselect/static/mizdb_tomselect/js/: popup_response.js
src/mizdb_tomselect/templates/mizdb_tomselect/: popup_response.html
tests/: .coveragerc  conftest.py  factories.py  pytest.ini  settings.py  test_e2e.py  test_views.py  test_widgets.py  urls.py
tests/fixtures/: data.json
tests/playwright/: test_dropdown_footer.py  test_edit_button.py  test_filter_by.py  test_mizselect.py  test_select_multiple.py
tests/playwright_tests/: conftest.py  test_add_button.py  test_changelist_button.py  test_disabled_observer.py  test_dropdown_footer.py  test_edit_button.py  test_filter_by.py  test_init_new.py  test_initial_selection.py  test_mizselect.py  test_select_multiple.py  test_tabular.py
tests/testapp/: forms.py  models.py  urls.py
tests/testapp/fixtures/: data.json
tests/testapp/migrations/: 0001_initial.py  0002_add_magazin_model.py
tests/testapp/templates/: base.html
