[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mizdb-tomselect"
version = "0.0.1"

[tool.coverage.run]
branch = true
source = ["mizdb_tomselect"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.black]
line-length = 120
target_version = ["py39", "py310", "py311"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120
select = [
    "D",        # pydocstyle
    "E", "W",   # pycodestyle
    "F",        # flake8
    "I",        # isort
]
ignore = [
    "D1",    # D1: Missing docstring error codes (because not every function and class has a docstring)
    "D203",  # D203: 1 blank line required before class docstring (conflicts with D211 and should be disabled, see https://github.com/PyCQA/pydocstyle/pull/91)
    "D205",  # D205: 1 blank line required between summary line and description
    "D212",  # D212: Multi-line docstring summary should start at the first line
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pycodestyle]
max-doc-length = 88