[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mizdb-tomselect"
version = "0.11.0"
authors = [
  { name="Philip Becker", email="yummytea1@gmail.com" },
]
description = "Django autocomplete widgets and views using TomSelect"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django"
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

[project.urls]
Source = "https://github.com/Actionb/mizdb-tomselect"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.js", "*.css", "*.css.map", "*.html"]

[tool.coverage.run]
branch = true
source = ["mizdb_tomselect"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120

[too.ruff.lint]
select = [
    "D",        # pydocstyle
    "E", "W",   # pycodestyle
    "F",        # flake8
    "I",        # isort
]
ignore = [
    "D1",    # D1: Missing docstring error codes (because not every function and class has a docstring)
    "D203",  # D203: 1 blank line required before class docstring (conflicts with D211 and should be disabled, see https://github.com/PyCQA/pydocstyle/pull/91)
    "D205",  # D205: 1 blank line required between summary line and description
    "D212",  # D212: Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
